# mimir-display

./: .env.example  .env.example.hyperpixelsq  .env.example.rgbmatrix  .gitignore  README.md  REFACTOR_TODO.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/: mqtt_state.json
mimir_display/: __init__.py  __main__.py  bootstrap_manager.py  config.py  mqtt_client_manager.py  ota.py  splash_renderer.py  version.py
mimir_display/content/: __init__.py  animation.py  cache.py  display.py  downloader.py  splash.py
mimir_display/hardware/: __init__.py  eframe_inky.py  hdmi.py  hyperpixelsq.py  inky.py  loader.py  rgbmatrix_led.py  simulation.py
mimir_display/network/: __init__.py  mdns.py  mqtt_client.old  mqtt_client.py  provisioning_server.py  webhook.py
mimir_display/network/mqtt/: __init__.py  client.py  commands.py  commands_display.py  commands_registration.py  constants.py  events.py  presence.py  registration.py  schemas.py  topics.py
mimir_display/storage/: device_config.py  registration.py
mimir_display/tools/: print_state.py
mimir_display/utils/: __init__.py  helpers.py  orientation.py  update.py
packaging/: mimir-display-updater.service  mimir-display-updater.timer  mimir-display.service
scripts/: build.sh  install.sh  install_display.sh  install_ota_updater.sh  mimir-display-updater.path  mimir-display-updater.service  ota_update.sh  pull_and_update.sh  run.sh  setup_connection.sh  update_display.sh
tests/: test_animated_content.py  test_animation_player.py  test_cli_hdmi_backend.py  test_hdmi_backend.py  test_ota_manager.py  test_rgbmatrix_backend.py  test_splash_layout.py
