[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mimir-display"
version = "1.0.3"
description = "Unified Mimir display client (Inky, HyperPixel, simulation)"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    # Core image & networking (hardware-neutral)
    "Pillow>=9.0.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "paho-mqtt>=1.6.0",
    "aiomqtt>=2.1.0,<3.0.0",
    "zeroconf>=0.47.0",
    "python-dotenv>=0.19.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
inky = [
    "inky",
    "numpy<2.0.0",
    "RPi.GPIO>=0.7.1",
    "spidev>=3.5",
]
hyperpixelsq = [
    # No extra runtime deps (framebuffer handled by kernel overlay)
]
rgbmatrix = [
    # Python bindings provided by hzeller/rpi-rgb-led-matrix build (may require manual install)
    # Package import name is 'rgbmatrix'; leave version unpinned due to source build nature.
    "rgbmatrix",
]
all = [
    # Convenience meta-extra; user installs all hardware support + dev tooling
    "inky",
    "numpy<2.0.0",
    "RPi.GPIO>=0.7.1",
    "spidev>=3.5",
    "rgbmatrix",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.8.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
    "types-Pillow>=9.0.0",
]

[project.scripts]
mimir-display = "mimir_display.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/display-client-inky-mimir"
Repository = "https://github.com/yourusername/display-client-inky-mimir"
Issues = "https://github.com/yourusername/display-client-inky-mimir/issues"

[tool.setuptools.packages.find]
include = ["mimir_display*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=mimir_display",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "hardware: marks tests that require physical hardware",
]
